Ensure location error is visible

--- a/css/style.css
+++ b/css/style.css
@@ -210,5 +210,7 @@ h2 {
   padding:0px 15px;
   text-align:left;
   width:650px;
+  max-width:100%;
+  padding:0px 15px;
   margin:0px auto;
 }
